# bro-code

./: README.md  WEB_MODE_PICKUP.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.svelte  config.ts  index.html
src/app/lib/: thinking.ts
src/app/modular/: README.md  types.ts
src/app/modular/components/Chat/: ChatComposer.svelte  ChatMessage.svelte  ChatPane.svelte  ExecCard.svelte  IntentInsight.svelte  StreamingMessage.svelte
src/app/modular/components/Panes/: DualPanes.svelte  VsCrosstalk.svelte
src/app/modular/components/Tabs/: ContextTab.svelte  KvTab.svelte  MemoryTab.svelte  PromptTab.svelte  SettingsTab.svelte  SourceTab.svelte  TerminalTab.svelte  ToolsTab.svelte  TranscriptsTab.svelte
src/app/modular/components/layout/: AppHeader.svelte
src/app/modular/components/shared/: TabBar.svelte
src/app/modular/lib/: agent.ts  config.ts  context.ts  index.ts  local-serve.ts  memory.ts  prompt.ts  provider.svelte.ts  scp.ts  settings-store.svelte.ts  supervision.ts  thinking.ts  tps.ts  types.ts  utils.ts
src/test/: setup.ts
web-backend/: server.js
