[package]
name = "bro-code"
version = "0.1.0"
edition = "2021"
description = "Bro — model-agnostic local LLM desktop"

[lib]
name = "bro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = ">=1.38", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
